--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -10,17 +10,21 @@ link_directories("~/local/lib")
 
 add_library(algorithm SHARED "algorithm.cpp")
 target_link_libraries(algorithm opencv_core opencv_highgui opencv_imgproc)
+set_target_properties(algorithm PROPERTIES XCODE_GENERATE_SCHEME TRUE)
 
 add_executable(main "main.cpp")
 target_link_libraries(main opencv_core opencv_imgcodecs opencv_imgproc)
 add_dependencies(main algorithm)
 # Can I use set_property to do this globally?
-set_target_properties(main PROPERTIES
-	XCODE_GENERATE_SCHEME TRUE
+set_target_properties(main PROPERTIES XCODE_GENERATE_SCHEME TRUE
     XCODE_SCHEME_WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
 
 add_executable(mat_allocator "mat_allocator.cpp")
 target_link_libraries(mat_allocator opencv_core)
+
+add_executable(mask "mask.cpp")
+target_link_libraries(mat_allocator opencv_core opecv_highgui)
+set_target_properties(mask PROPERTIES XCODE_GENERATE_SCHEME TRUE)
 
 # (lldb) command alias compile platform shell build.sh
 # (lldb) compile
