--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -24,6 +24,12 @@ add_executable(mat_allocator "mat_allocator.cpp")
 target_link_libraries(mat_allocator opencv_core)
 set_target_properties(mat_allocator PROPERTIES XCODE_GENERATE_SCHEME TRUE)
 
+add_executable(blob blob.cpp)
+target_link_libraries(blob opencv_core opencv_imgcodecs opencv_highgui
+	opencv_imgproc opencv_features2d)
+set_target_properties(blob PROPERTIES XCODE_GENERATE_SCHEME TRUE
+	    XCODE_SCHEME_WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
+
 # (lldb) command alias compile platform shell build.sh
 # (lldb) compile
 # (lldb) target create main
